# remote-drop

./: Cargo.toml  LICENSE.txt  README.md  makefile
examples/: main.rs  main2.rs
src/: lib.rs  mutex.rs  remote_drop.rs
