[package]
name = "remote-drop"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = {version = "0.8.0", features = ["defmt-03"]}

embassy-sync = {git = "https://github.com/embassy-rs/embassy", features=[], optional=true}

[dev-dependencies]
critical-section = {version = "1.1.2", features = ["std"]}
talc = "4.4.1"
spin = { version =  "0.9.8", default-features = false, features = ["lock_api", "spin_mutex"] }

[features]
default = ["std"]
std = []
embassy = ["dep:embassy-sync"]

[[example]]
name = "main"



